--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Home page:    <https://metacpan.org/release/Syntax-Highlight-RDF>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Syntax-Highlight-RDF>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.002  2013-03-23
+
+ - (Bugfix) Fix fatal UTF-8-related warning on certain Perls.
+
 0.001  2013-03-22  # Initial release
 
 
